--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,14 +6,14 @@
   }
   
   .footer-link {
-    color: #ffffff;
+    color: #5e3131;
     text-decoration: none;
     font-weight: 500;
     transition: color 0.3s ease-in-out;
   }
   
   .footer-link:hover {
-    color: white;
+    color: rgb(46, 43, 43);
     text-decoration: underline;
   }
   
