--- a/src/pages/Propiedades.css
+++ b/src/pages/Propiedades.css
@@ -176,3 +176,14 @@
   transform: scale(1.05);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
+
+.mapa-propiedades-container {
+  width: 100%;
+  max-height: 350px; /* alto compacto */
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  position: relative;
+  background-color: #c82333;
+  margin-bottom: 200px;
+}
+
