--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,14 +27,18 @@ header#header-section {
   
   .navbar-nav .nav-link {
     color: white;
-    font-weight: 800; /* más grueso */
 
 
   }
+
+  .navbar-nav .nav-link.active {
+    color: #fff !important;   /* texto blanco */
+    font-weight: 600;         /* más bold */
+  }
+  
   
   .navbar-nav .nav-link:hover {
     color: #ffffff;
-    font-weight: 800;
     background-color: rgba(128, 128, 128, 0.1); /* fondo gris transparente más suave */
     background-image: radial-gradient(
       circle,
@@ -43,7 +47,7 @@ header#header-section {
     );
     background-size: 10px 10px; /* tamaño del patrón de puntos */
     transition: background-color 0.3s ease, background-image 0.3s ease;
-    border-radius: 6px;
+    border-radius: 10px;
   }
   
   header.hidden {
@@ -139,7 +143,7 @@ header#header-section {
     }
     header#header-section {
 
-      padding: 1rem 1rem;
+      padding: 0.5rem 0.5rem;
     }
   
   
