--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -14,7 +14,7 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(135deg, #b02a37, #e74c3c);
+  background: linear-gradient(135deg, #b02a37, #91281c);
   padding: 20px;
 }
 
