--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #660707; /* Fondo gris claro */
-    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #e01010 0%, #660000 100%);
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
   
   h1.display-4 {
     color: #212529;
