--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -19,6 +19,14 @@ body {
     transform: translateY(-6px);
     box-shadow: 0 12px 20px rgba(0,0,0,0.15);
   }
+
+  .card-img-top {
+    transition: none !important; /* elimina animaciones al hacer hover */
+}
+
+.card-img-top:hover {
+    transform: none !important; /* desactiva cualquier escala */
+}
   
   .btn-primary {
     background-color: #007bff;
